# boldpy

./: CHANGELOG.md  LICENSE  README.md  boldpy_analyze.py  boldpy_plots.py  boldpy_plots_multiregion.py  cluster_zones.py  example_config.json  fit_t2star.py  generate_mlco.py  group_analysis.py  heterogeneity.py  make_draw_refs.py  mkdocs.yml  mlco_analysis.py  overlay_analysis.py  prepare_data.py  prepare_dicom.py  pyproject.toml  requirements.txt  roi_drawer.py  roi_format_utils.py  setup.py  tissue_zones.py
boldpy/analysis/: __init__.py  perfusion_analysis.py
boldpy/fitting/: t2star_fitter.py
boldpy/loaders/: __init__.py  dicom_parametric.py  pvdataset.py
configs/thresholds/: README.md  kidney_human_example.yaml  kidney_mouse_default.yaml
configs/zones/: README.md  heart_12layer.yaml  kidney_12layer.yaml  kidney_24layer.yaml  kidney_multiregion_12_12.yaml  kidney_multiregion_6_8_4.yaml  kidney_multiregion_8_8_6.yaml
docs/: examples-with-data.md  index.md  installation.md  kmeans-zone-clustering.md  metrics-documentation.md  pep-integration.md  quick-start.md  scripts-reference.md  user-guide.md
examples/: groups_config.json
examples/tutorial_data/: README.md  sample_config.json  sample_mlco_layers.npy  tutorial_metadata.json
examples/tutorial_data/prepared_maps/: sample_air_r2star_custom.npy  sample_air_t2star_custom.npy  sample_oxygen1_r2star_custom.npy  sample_oxygen1_t2star_custom.npy  sample_perfusion.npy
examples/tutorial_data/tutorial_results/: tutorial_sample_complete_analysis.json
pipeline/: boldpy_collate.py  boldpy_collator.py  boldpy_pep_schema.yaml  boldpy_pipeline.py  boldpy_pipeline_interface.yaml  boldpy_pipestat_schema.yaml  boldpy_prepare.py  boldpy_prepare_interface.yaml  boldpy_project_interface.yaml
pipeline/examples/: looper_config.yaml  project_config.yaml  sample_table.csv
tests/: conftest.py  helpers.py  test_cluster_zones.py  test_compare_zone_configs.py  test_generate_mlco.py  test_mlco_analysis.py  test_perfusion_analysis.py  test_t2star_fitting.py  test_tissue_zones.py  test_tissue_zones_extended.py
