[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "boldpy"
version = "3.0.0"
description = "BOLD MRI Analysis Framework using Multi-Layer Concentric Objects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jason Smith", email = "jasonsmith@virginia.edu"}
]
keywords = ["MRI", "BOLD", "kidney", "analysis", "imaging", "medical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dicom = [
    "pydicom>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pydicom>=2.3.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/jpsmith5/boldpy"
Documentation = "https://boldpy.readthedocs.io"
Repository = "https://github.com/jpsmith5/boldpy"
Issues = "https://github.com/jpsmith5/boldpy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["boldpy*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [".", "tests"]
